// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<li
  className="cf-hbr0yt"
  role={null}
>
  <a
    aria-label="PaginationLabel"
    className="cf-1ex7c60"
    href="#"
    onClick={[Function]}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active 1`] = `
<li
  className="cf-12efb8q"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render active dot 1`] = `
<li
  className="cf-1k5in0r"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-ffljdr"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render active next 1`] = `
<li
  className="cf-1g2x7sj"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render active prev 1`] = `
<li
  className="cf-1g2x7sj"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled 1`] = `
<li
  className="cf-u0p974"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled dot 1`] = `
<li
  className="cf-yjyfgx"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-ffljdr"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled next 1`] = `
<li
  className="cf-16vpre1"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled prev 1`] = `
<li
  className="cf-16vpre1"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;
